# melody-128

./: .gitignore  CMakeLists.txt  melody-128.sublime-workspace
resource/: config.ini  config.yml  default.rgs  melody128.rgs
src/: Global.hpp  imgui.ini  main.cpp
src/TestScene/: CamNavigation.cpp  ConfigLoader.cpp  EpicGLFW.cpp  ImGuiLayout.cpp  TerminalBasic.cpp  TestScene.hpp  UILayout.cpp  imgui.ini
src/core/: App.hpp  Core.cpp  Scene.hpp
src/scene/: MainEditor.cpp  MainEditor.hpp
src/utils/: Config.cpp  Config.hpp  Terminal.cpp  Terminal.hpp
